fixed item align in services

--- a/src/assets/css/critical.css
+++ b/src/assets/css/critical.css
@@ -172,7 +172,6 @@
     min-width: 12.5rem;
     padding: 0 1.5rem;
     background-color: var(--primary);
-    display: inline-block;
     position: relative;
     z-index: 1;
     /* prevents padding from adding to the width */
@@ -286,7 +285,6 @@
     gap: clamp(1rem, 2.3vw, 1.25rem);
   }
   #services-1130 .cs-item {
-    border: 2px #203E78 solid;
     width: 100%;
     text-align: center;
     list-style: none;
@@ -294,17 +292,17 @@
     /* 24px - 32px */
     padding: clamp(1.5rem, 3vw, 2rem);
     background-color: #fff;
+    border: 2px #203E78 solid;
     border-radius: 1rem;
     /* prevents padding and border from affecting height and width */
     box-sizing: border-box;
     grid-column: span 12;
-    align-items: center;
-    /* grid-row: span 1; */
-    /* display: flex;
+    grid-row: span 1;
+    display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center; */
-    /* position: relative; */
+    justify-content: center;
+    position: relative;
     z-index: 1;
     transition: box-shadow 0.3s, border-color 0.3s;
   }
@@ -338,7 +336,6 @@
   #services-1130 .cs-graphic {
     width: 100%;
     height: auto;
-    margin-left: 100%;
   }
   #services-1130 .cs-h3 {
     /* 20px - 25px */
@@ -372,7 +369,6 @@
 @media only screen and (min-width: 64rem) {
   #services-1130 .cs-item {
     grid-column: span 3;
-    border: 2px #203E78 solid;
   }
 }
 /* Dark Mode */
